--- a/apply-now.html
+++ b/apply-now.html
@@ -3238,7 +3238,7 @@ var elementorFrontendConfig = {"environmentMode":{"edit":false,"wpPreview":false
 															<ul></ul>
 														</div>
 														<form
-															action="Thank_you.html" name="Entry Sheet Form" id="Entry Sheet Form"
+															action="Thank_you.html"
 															method="post" class="wpcf7-form init"
 															aria-label="Contact form" novalidate="novalidate"
 															data-status="init">
