--- a/index.html
+++ b/index.html
@@ -3165,7 +3165,7 @@ var elementorFrontendConfig = {"environmentMode":{"edit":false,"wpPreview":false
 																	<div class="elementor-widget-container">
 																		<div class="elementor-button-wrapper"> <a
 																				class="elementor-button elementor-button-link elementor-size-lg"
-																				href="apply-now.html"> <span
+																				href="https://forms.gle/YYcg4syf9DfRRmkV8"> <span
 																					class="elementor-button-content-wrapper">
 																					<span
 																						class="elementor-button-icon elementor-align-icon-left">
